Fix Safari input field cut off

--- a/app/assets/stylesheets/includes/form.scss
+++ b/app/assets/stylesheets/includes/form.scss
@@ -27,10 +27,9 @@
 
 .form-group select,
 .form-group__field {
-  height: 35px;
   width: 100%;
   border: 1px solid $input-border;
-  padding: 10px;
+  padding: 7px 10px;
   color: $text-muted;
   font-size: $font-size - 3;
   border-radius: 0;
